# TestCI

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
ci/appveyor/: buildTestCI.ps1  installMPI.ps1
ci/travis/: installMETIS  installMPI
codes/: CMakeLists.txt  main.cpp
testcases/: ccpi.cpp  regressionTests.py
testcases/subsonicCylinder/: subsonicCylinder.inp  subsonicCylinder.resid
